modify non-winner message

--- a/poker/index.html
+++ b/poker/index.html
@@ -194,7 +194,7 @@
             // For non-winners
             socket.on('display and clear',(evalMsg)=>{
                 // Display message
-                evalMsg += "\n Click corresponding button to start a new game!"
+                evalMsg += "\n Click corresponding buttons to clear common tokens and start a new game!"
                 player.msg.textContent = evalMsg;
                 window.alert(evalMsg);
                 console.log('alert message closed');
