--- a/poker/index.html
+++ b/poker/index.html
@@ -148,6 +148,7 @@
                     player.makeFold();
                     console.log('emit fold to server')
                     socket.emit('made fold');
+                    console.log('fold action end')
                 }
 
                 // setup bet button listeners
