--- a/poker/index.html
+++ b/poker/index.html
@@ -20,8 +20,10 @@
             <li>A new game will be initiated once all players have clicked the 'Reset Game' button. </li>
         </ul>
         <h3>Simplified rules:</h3>
-        <p>For each turn, there are maximum two cycles. During the first cycle through all the players, raises are allowed. In the second cycle (if needed), only matches are allowed. </p>
-        <p>Play order is determined by the order of users entering their username. Play order will be rotated in new games.</p>
+        <ul>
+            <li>For each turn, there are maximum two cycles. During the first cycle through all the players, raises are allowed. In the second cycle (if needed), only matches are allowed.</li>
+            <li>Play order is determined by the order of users entering their username. Play order will be rotated in new games.</li>
+        </ul>
         <pre id="evalMsg">      </pre>
 
   </header>
@@ -51,7 +53,6 @@
         <button class="reset">Reset Game</button>
     </div>
 
-    <!--Player 1 Container-->
     <div class="area player" id="player">
         <div class="table cards">
             <h2>Player's cards: </h2>
@@ -66,23 +67,6 @@
         <button class="fold">Fold</button>
         <button class="bet">Make A Bet!</button>
     </div>
-
-    <!--Player 2 Container-->
-<!--     <div class="area player" id="player2">
-        <div class="table cards">
-            <h2>Player's cards: </h2>
-        </div>
-
-        <div class="table tokens">
-            <h2>Player's tokens: </h2>
-            
-        </div>
-    </div>
-
-    <div class="area action" id="player2">
-        <button class="fold">Fold</button>
-        <button class="bet">Make A Bet!</button>
-    </div>  -->
     
   </body>
 
