--- a/poker/index.html
+++ b/poker/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="cardstyle.css">
     <title>Card Game</title>
   </head>
-
-  <header>
+  
+  <body>
+    <header>
         <h1>Multi-player Poker Card Game</h1>
         <h2 id="username"> Refresh page until pop-up window asking for username appears! </h2>
         <h3>Instructions: </h3>
@@ -16,7 +17,7 @@
             <li>Each game consists of 4 rounds, where round 0 has no cards flipped, round 1 flips first three cards, round 2 flips fourth card, and round 3 flips last card. </li>
             <li>In each round, players take turns making a bet. The common cards are automatically revealed once a round is finished. </li>
             <li>In each player's turn, the players can bet tokens by selecting tokens and pressing the 'Make Bet!' button. The player can also choose to fold and quit this game. </li>
-            <li>Throughout the game, there will be a message area on the webpage displaying the current state of the game and reminders for what to do. The text will be shown in bright blue for contrast. </li>
+            <li>Throughout the game, there will be a message area on the webpage displaying the current state of the game and reminders for what to do. The text will be shown in bright colors for contrast. </li>
             <li>Once all rounds are done, a pop-up window will display the winner. This message will also be shown in the message area of the webpage. </li>
             <li>Then, winners can collect tokens and non-winners can clear the tokens by pressing the corresponding buttons.</li>
             <li>A new game will be initiated once all players have clicked the 'Reset Game' button. </li>
@@ -27,10 +28,8 @@
             <li>Play order is determined by the order users entered their username. Play order will be rotated in new games.</li>
         </ul>
         <pre id="evalMsg"> Waiting for username. </pre>
+    </header>
 
-  </header>
-
-  <body>
     <div class="area common">
         <div class="table cards">
             <h2>Common Table</h2>
