add start button

--- a/poker/index.html
+++ b/poker/index.html
@@ -30,6 +30,7 @@
         <h3> All Players: </h3>
         <p id = 'logplayers'></p>
         <pre id="evalMsg"> Waiting for username. </pre>
+        <button class="start"> Start!</button>
     </header>
 
     <div class="area common">
