--- a/poker/index.html
+++ b/poker/index.html
@@ -80,6 +80,17 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     var socket = io();
+
+    function startAction (){
+        console.log('pressing start button')
+        socket.emit('ready to start')
+    }
+
+    function resetAction (){
+        console.log('pressing reset button')
+        socket.emit('reset game');
+    }
+
     // Execute code after page is loaded
     window.addEventListener("load", (event) => {
             socket.on('connect', ()=>console.log('user connected'))
@@ -95,10 +106,7 @@
                 player.username = username;
                 player.msg.textContent = 'Waiting for more players';
                 // Set up start listener
-                player.startBtn.addEventListener('click', ()=>{
-                    console.log('pressing start button')
-                    socket.emit('ready to start')
-                }, {once: true})
+                player.startBtn.addEventListener('click', startAction, {once: true})
                 // Signal player is ready to server
                 socket.emit('player ready', player); // pushing player only pushes properties e.g. username
             })
@@ -114,30 +122,28 @@
             socket.on('start game', ()=>{
                 // clear start listener
                 console.log('clearing start listener')
-                player.startBtn = player.startBtn.cloneNode();
+                player.startBtn.removeEventListener('click', startAction, {once: true});
+                //player.startBtn = player.startBtn.cloneNode();
                 // setup reset button
                 player.startBtn.textContent = 'Reset';
                 player.startBtn.classList.add('reset');
                 // setup reset listener
-                player.startBtn.addEventListener('click', ()=>{
-                    console.log('pressing reset button')
-                    socket.emit('reset game');
-                }, {once: true})
+                console.log('adding reset listener')
+                player.startBtn.addEventListener('click', resetAction, {once: true})
             })
 
             socket.on('reset game requested', ()=>{
-                // clear start listener
-                console.log('clearing start listener')
-                player.startBtn = player.startBtn.cloneNode();
+                // clear reset listener
+                console.log('clearing reset listener')
+                player.startBtn.removeEventListener('click', resetAction, {once: true})
+                //player.startBtn = player.startBtn.cloneNode();
                 // setup start button
                 player.startBtn.textContent = 'Start';
                 player.startBtn.classList.remove('reset');
                 //! Alert players a reset has been requested
                 // setup start listener
-                player.startBtn.addEventListener('click', ()=>{
-                    console.log('pressing start button')
-                    socket.emit('ready to start')
-                }, {once: true})
+                console.log('adding start listener')
+                player.startBtn.addEventListener('click', startAction, {once: true})
             })
 
             socket.on('deal common cards', (commonCards)=>{
