update reset warning

--- a/poker/index.html
+++ b/poker/index.html
@@ -21,7 +21,7 @@
             <li>Once all rounds are done, a pop-up window will display the winner. This message will also be shown in the message area of the webpage. </li>
             <li>Then, winners can collect tokens and non-winners can clear the tokens by pressing the corresponding buttons.</li>
             <li>A new game will be initiated once all players have clicked the 'Next Game' button. </li>
-            <li>NOTE: You can click `Reset` to start a brand new game, all players will start fresh, previous tokens won and lost will all be rest. </li>
+            <li>WARNING: Anyone can click `Reset` to start a brand new game, but all players will start fresh, all previous tokens won and lost will all be rest. </li>
         </ul>
         <h3>Simplified poker rules:</h3>
         <ul>
