--- a/poker/index.html
+++ b/poker/index.html
@@ -38,6 +38,7 @@
                 <ul>
                     <li>Game starts when ANY ONE player clicks 'Start button'. </li>
                     <li>Anyone can click `Reset` to start a brand new game, but all players will start fresh, all previous tokens won and lost will all be rest. </li>
+                    <li>After each complete game, players MUST click the collect/clear token button before clicking the next game button. </li>
                 </ul>
             </div>
             <div class="button">
