--- a/poker/index.html
+++ b/poker/index.html
@@ -186,6 +186,8 @@
                 player.msg.textContent = 'You are playing now!';
                 player.msg.textContent += `\nRound: ${game.round}`;
                 player.msg.textContent += `\nHighest bet value: ${game.highestBet}`;
+                let playerArea = document.querySelector('div.area.player');
+                playerArea.classList.toggle('playing');
                 
                 function betAction(){
                     console.log('bet action called');
@@ -194,6 +196,7 @@
                     //console.log(selectedTokenValues, sum, success)
                     console.log("success", success);
                     if (success){
+                        playerArea.classList.toggle('playing');
                         console.log('emit bet to server')
                         socket.emit('made bet', selectedTokenValues, sum, player);
                     } else {
@@ -205,6 +208,7 @@
                     console.log('fold action called')
                     player.betBtn.removeEventListener('click', betAction, {once: true});
                     player.makeFold();
+                    playerArea.classList.toggle('playing');
                     console.log('emit fold to server')
                     socket.emit('made fold');
                     console.log('fold action end')
