--- a/poker/index.html
+++ b/poker/index.html
@@ -21,7 +21,7 @@
                 <li>Round 2: flip fourth card</li>
                 <li>Round 3: flip last card</li>
             </ul>
-            <li>In each player's turn, the players can bet tokens by selecting tokens and pressing the 'Make Bet!' button. The player can also choose to fold and quit this game. </li>
+            <li>In each player's turn, the players can bet tokens by selecting tokens and pressing the 'Make Bet!' button. The player can also choose to fold and quit this game. A light green border around your table will appear to signify it's your turn. </li>
             <li>Throughout the game, there will be a message area (in bright colors) at the bottom left displaying the current state of the game and reminders for what to do. </li>
             <li>Once all rounds are done, a pop-up window will display the winner. This message will also be shown in the message area of the webpage. </li>
             <li>Then winners can collect tokens and non-winners can clear the tokens by pressing the corresponding buttons.</li>
