rotate logged players on client side

--- a/poker/index.html
+++ b/poker/index.html
@@ -132,6 +132,7 @@
             })
             
             socket.on('log all players', (players)=>{
+                console.log('logging player')
                 let log = document.querySelector('#logplayers');
                 log.textContent = ''
                 players.forEach(serverPlayer => {
